--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="/Black_Bird_insignia.png" /> <!-- Corrected favicon path -->
   </head>
   <body>
+    <p>this is test</p>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
